# learning-cicd-flask

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
app/: main.py
tests/: test_main.py
